# rust-bpe

./: Cargo.toml  README.MD  Readme.md
src/: gpu.rs  lib.rs  main.rs  pair_freq_shader.wgsl  tokenizer.rs  tokenizer_train.json  tokenizer_training.json
src/models/: rust-bpe-spaces-20k.json  rust-bpe-uncased-25k.json
src/resources/: tokenizer_10k.json  tokenizer_13k.json  tokenizer_20k.json  tokenizer_training_backup.json  tokenizer_training_backup2.json
src/tokenizer/: gpu.rs  mod.rs  pair_freq_shader.wgsl  token_config.rs  tokenizer.rs  trie.rs
src/wasm/: README.md  rust_bpe.d.ts  rust_bpe.js  rust_bpe_bg.wasm  rust_bpe_bg.wasm.d.ts
tests/: detokenized.txt  tokenizer_tests.rs
