[package]
name = "rust-bpe"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = "1.16.1"
futures = "0.3.30"
futures-intrusive = "0.5.0"
indexmap = "2.2.6"
pollster = "0.3.0"
rayon = "1.5.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wgpu = "0.20.1"

wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4"

[lib]
crate-type = ["cdylib"]
