[package]
name = "rust_bpe"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = "1.16.1"
futures = "0.3.30"
futures-intrusive = "0.5.0"
indexmap = "2.2.6"
pollster = "0.3.0"
rayon = "1.5.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wgpu = "0.20.1"
dashmap = "6.0.1"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4"
serde-wasm-bindgen = "0.6.5"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
pyo3 = { version = "0.22.0", features = ["extension-module"] }

[lib]
crate-type = ["cdylib", "rlib"]
